--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -222,6 +222,43 @@
     border-radius: 8px;
     border: 1px solid #ccc;
     margin-bottom: 20px;
+    position: relative;
+}
+
+.popularProduct:hover .popularProduct__hover {
+    display: flex;
+}
+
+.popularProduct__hover {
+    position: absolute ;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.popularProduct__hover--icons {
+    display: flex;
+}
+
+.iconContactProduct {
+    border-radius: 8px;
+    height: 34px;
+    width: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow:rgb(145 158 171 / 0.2) 0px 2px 4px -1px;
+    background-color: white;
+    margin: 0 2px;
+}
+
+.iconContactProduct:hover {
+    background-color: #0aad0a;
+    color: white;
 }
 
 .popularProduct__container {
@@ -318,6 +355,15 @@
     margin-left: 17px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    position: relative;
+}
+
+.content__bestSells--product:hover .popularProduct__hover  {
+    display: flex;
+}
+
+.content__bestSells--product:hover .popularProduct__hover--icons {
+    margin-bottom: 30%;
 }
 
 .content__bestSells--container {
