--- a/Styles/ShopPage.css
+++ b/Styles/ShopPage.css
@@ -219,6 +219,7 @@ a {
     padding: 40px;
     border-radius: 6px;
     background-color: #F0F3F2;
+    color: #001e2b;
     font-size: calc(21.5px + 1.125vw);
     font-weight: 600;
 }
@@ -273,6 +274,10 @@ a {
 }
 
 .card__item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: calc(100% / 2);
     margin-top: 16px;
     padding: 0 8px;
@@ -378,6 +383,36 @@ a {
     text-decoration: line-through;
 }
 
+.card-icon {
+    position: absolute;
+    display: none;
+}
+
+.card__item:hover .card-icon {
+    display: flex;
+}
+
+.card-icon__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    margin: 0 2px;
+    border-radius: 6px;
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    background-color: white;
+}
+
+.card-icon__item:hover {
+    background-color: #0aad0a;
+    color: white;
+}
+
+.card-icon__item>i {
+    font-size: 14px;
+}
+
 .main__pagination {
     display: flex;
 }
@@ -397,6 +432,11 @@ a {
 .pagination__item:last-child {
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
+}
+
+.pagination__item--active {
+    background-color: #0aad0a;
+    color: white;
 }
 
 @media (min-width: 576px) {
