--- a/Styles/styles-c.css
+++ b/Styles/styles-c.css
@@ -65,8 +65,9 @@ img{
 .four li:hover{
     background-color: #0aad0a;
 }
-@media (max-width:740px){
+@media (max-width:768px){
     .stores ol{
-        width: 70%!important;
+        width: 70%;
     }
+     
 }
